--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Cats</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bobaa </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Adorable Cats</h1>
-    <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?w=400" alt="Cat">
-  <h4>I like cats</h4>
+  <div class="container">
+      <img src="bobaa.jpg" alt="Boba Drink">
+      <h1>Bobaa </h1>
+      <p>Boba tea makes every day better!!!!</p>
+  </div>
+
 </body>
-</html> 
+</html>
