--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <div class="container">
-      <img src="bobaa.jpg" alt="Boba Drink">
+      <img src="bobaa.png" alt="Boba Drink">
       <h1>Bobaa </h1>
+      <br>
       <p>Boba tea makes every day better!!!!</p>
   </div>
 
