--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <img src="bobaa.png" alt="Boba Drink">
       <h1>Bobaa </h1>
       <br>
-      <p>Boba tea makes every day better!!!!</p>
-      <br>
+      <li>Boba tea makes every day better!!!!</li>
       <p>It's soo sweet</p>
   </div>
 
