--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <div class="container">
       <img src="bobaa.png" alt="Boba Drink">
       <h1>Bobaa </h1>
-      <br>
       <li>Boba tea makes every day better!!!!</li>
-      <p>It's soo sweet</p>
+      <li>It's soo sweet</li>
   </div>
 
 </body>
